Edited VS Code settings

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -479,4 +479,5 @@
     "dart.showIgnoreQuickFixes": true,
     "gitlens.views.fileHistory.enabled": true,
     "gitlens.views.lineHistory.enabled": true,
+    "window.restoreWindows": "all",
 }
