Some settings changes

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -85,9 +85,11 @@
         "syncexecutor",
         "uikit",
         "uncollapsed",
+        "viewbox",
         "wcomp",
         "workschedule",
-        "wrike"
+        "wrike",
+        "xmlns"
     ],
     "workbench.colorCustomizations": {
         "editorError.foreground": "#FF0000",
