--- a/.config/iTerm2/com.googlecode.iterm2.plist
+++ b/.config/iTerm2/com.googlecode.iterm2.plist
@@ -64,7 +64,7 @@
 	<key>NSTableView Supports v2 KeyBingingTable</key>
 	<true/>
 	<key>NSWindow Frame SUAutomaticUpdateAlert</key>
-	<string>824 482 616 174 0 0 1440 877 </string>
+	<string>412 527 616 174 0 0 1440 877 </string>
 	<key>NSWindow Frame SUUpdateAlert</key>
 	<string>408 375 620 392 0 0 1440 877 </string>
 	<key>NSWindow Frame SessionsPreferences</key>
@@ -72,7 +72,7 @@
 	<key>NSWindow Frame SharedPreferences</key>
 	<string>328 330 796 486 0 0 1440 877 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>0 877 1440 453 0 0 1440 877 </string>
+	<string>0 425 1440 453 0 0 1440 877 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
 	<string>442 269 570 452 0 0 1440 877 </string>
 	<key>New Bookmarks</key>
@@ -1303,7 +1303,7 @@
 	<key>NoSyncInstallationId</key>
 	<string>739BEBB8-702C-4064-944E-B881D429FEDF</string>
 	<key>NoSyncLastTipTime</key>
-	<real>585500457.87141204</real>
+	<real>594311924.0977</real>
 	<key>NoSyncNeverRemindPrefsChangesLostForFile</key>
 	<true/>
 	<key>NoSyncNeverRemindPrefsChangesLostForFile_selection</key>
@@ -1343,6 +1343,25 @@
 		<string>0025</string>
 		<string>0026</string>
 		<string>0027</string>
+		<string>0028</string>
+		<string>0029</string>
+		<string>0030</string>
+		<string>0031</string>
+		<string>0032</string>
+		<string>0033</string>
+		<string>0034</string>
+		<string>0035</string>
+		<string>0036</string>
+		<string>0037</string>
+		<string>0038</string>
+		<string>0039</string>
+		<string>0040</string>
+		<string>0041</string>
+		<string>0042</string>
+		<string>0043</string>
+		<string>0044</string>
+		<string>0045</string>
+		<string>0046</string>
 	</array>
 	<key>PointerActions</key>
 	<dict>
@@ -1390,11 +1409,11 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2019-07-22T17:32:12Z</date>
+	<date>2019-10-01T12:51:44Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
 	<key>ShowFullScreenTabBar</key>
-	<false/>
+	<true/>
 	<key>WordCharacters</key>
 	<string>/-+\~_.</string>
 	<key>iTerm Version</key>
