Changes in configs

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -44,6 +44,8 @@
         "Millis",
         "Onboarding",
         "Overrided",
+        "Parens",
+        "Paypal",
         "Rect",
         "Rects",
         "Roadmap",
@@ -74,16 +76,19 @@
         "devtool",
         "draggable",
         "dropdown",
+        "emailable",
         "fpjs",
         "gitlens",
         "mgmt",
         "microtask",
         "middlewares",
         "mockito",
+        "mutationobserver",
         "overriden",
         "params",
         "pomoddoro",
         "readonly",
+        "refetching",
         "reselect",
         "responsibles",
         "rgba",
@@ -96,8 +101,10 @@
         "stylesheet",
         "sublist",
         "syncexecutor",
+        "testid",
         "uikit",
         "uncollapsed",
+        "upsert",
         "viewbox",
         "wcomp",
         "workschedule",
@@ -503,7 +510,7 @@
     "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
     "workbench.iconTheme": "vscode-icons",
     "sync.gist": "9f3d6768a81a03988d2bf60fb2996992",
-    "workbench.colorTheme": "Better Solarized Dark",
+    "workbench.colorTheme": "One Dark Pro",
     "sync.autoUpload": true,
     "terminal.integrated.fontFamily": "MesloLGS NF",
     "sync.quietSync": true,
