Changes in configs

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -1,6 +1,5 @@
 {
   "git.confirmSync": false,
-  "window.zoomLevel": 0,
   "editor.fontFamily": "FiraCode-Retina",
   "editor.fontSize": 14,
   "editor.fontLigatures": true,
@@ -47,6 +46,7 @@
     "Paypal",
     "Rect",
     "Rects",
+    "Retryable",
     "Roadmap",
     "Rollbar",
     "Scroller",
@@ -58,8 +58,10 @@
     "Unshare",
     "Wspace",
     "Zoomer",
+    "backoff",
     "bbox",
     "bezier",
+    "bigserial",
     "browserslist",
     "bugfixes",
     "clsx",
@@ -69,6 +71,7 @@
     "datetime",
     "debounced",
     "debouncer",
+    "decycler",
     "deps",
     "deserialize",
     "deserializer",
@@ -77,9 +80,13 @@
     "draggable",
     "dropdown",
     "emailable",
+    "entrypoint",
     "fingerprintjs",
     "fpjs",
+    "frontmatter",
     "gitlens",
+    "hacky",
+    "jsdelivr",
     "mgmt",
     "microtask",
     "middlewares",
@@ -87,7 +94,9 @@
     "mutationobserver",
     "overriden",
     "params",
+    "pino",
     "pomoddoro",
+    "postgres",
     "readonly",
     "refetching",
     "reselect",
@@ -103,8 +112,12 @@
     "sublist",
     "syncexecutor",
     "testid",
+    "timestamptz",
+    "transpiled",
+    "typeorm",
     "uikit",
     "uncollapsed",
+    "unnest",
     "upsert",
     "viewbox",
     "wcomp",
@@ -119,7 +132,6 @@
   "git.enableSmartCommit": true,
   "files.autoSave": "afterDelay",
   "git.autofetch": true,
-  "workbench.editor.showTabs": true,
   "diffEditor.ignoreTrimWhitespace": false,
   "gitlens.blame.format": "${message|40?} ${authorAgo|14-}",
   "gitlens.keymap": "chorded",
@@ -153,13 +165,16 @@
   "[json]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "files.exclude": {
-    "**/dist": true
-  },
   "extensions.ignoreRecommendations": false,
   "sqltools.connections": [],
   "[javascript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "editor.formatOnSave": true
+  "editor.formatOnSave": true,
+  "editor.renameOnType": true,
+  "editor.bracketPairColorization.enabled": true,
+  "typescript.inlayHints.parameterNames.enabled": "literals",
+  "typescript.inlayHints.functionLikeReturnTypes.enabled": true,
+  "typescript.updateImportsOnFileMove.enabled": "always",
+  "editor.guides.bracketPairs": true
 }
