--- a/.config/iTerm2/com.googlecode.iterm2.plist
+++ b/.config/iTerm2/com.googlecode.iterm2.plist
@@ -1255,6 +1255,8 @@
 	</dict>
 	<key>Print In Black And White</key>
 	<true/>
+	<key>PromptOnQuit</key>
+	<false/>
 	<key>ShowFullScreenTabBar</key>
 	<true/>
 	<key>SoundForEsc</key>
